[metadata]
name = torchlearn
version = file:VERSION
author = Vincent Coriou
author_email = vincent.coriou@gmail.com
url = https://github.com/VincentCoriou
description =
long_description = file: README.md
long_description_content_type = text/markdown
license = "Apache License 2.0"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
python_requires = >=3.7, <4
install_requires = file:requirements.txt

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev = file:requirements-dev.txt